--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# NestJS / TypeScript build
+dist/
+*.js
+*.js.map
+
 # Environment
 .env
 .env.*
