--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.20",
     "@nestjs/typeorm": "^10.0.0",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
